Change kitty theme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family JetBrainsMono Nerd Font Mono
+font_family JetBrainsMono Nerd Font 
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -852,12 +852,13 @@ window_padding_width 2
 #: only at the bottom and right edges.
 
 # active_border_color #00ff00
-# active_border_color none
+active_border_color none
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
 # inactive_border_color #cccccc
+inactive_border_color #ffffff
 
 #: The color for the border of inactive windows.
 
@@ -2452,3 +2453,9 @@ window_padding_width 2
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Rosé Pine
+include current-theme.conf
+# END_KITTY_THEME
