--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2456,6 +2456,6 @@ inactive_border_color #ffffff
 
 
 # BEGIN_KITTY_THEME
-# Rosé Pine
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
