--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -371,6 +371,7 @@ font_family JetBrainsMono Nerd Font
 #: Mouse {{{
 
 # mouse_hide_wait 3.0
+mouse_hide_wait -1
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
