Update kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,11 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family JetBrainsMono Nerd Font 
+# font_family      auto
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
+font_family JetBrains Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -25,6 +26,7 @@ font_family JetBrainsMono Nerd Font
 #:     bold_italic_font Operator Mono Medium Italic
 
 # font_size 11.0
+font_size 11.5
 
 #: Font size (in pts)
 
@@ -47,6 +49,7 @@ font_family JetBrainsMono Nerd Font
 #: the text as LTR, which FriBidi expects for terminals.
 
 # symbol_map
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AD,U+E700-U+E7BC,U+E7C4-U+E7C5,U+EA60-U+EA88,U+EA8A-U+EA8C,U+EA8F-U+EAC7,U+EAC9,U+EACC-U+EAFA,U+EAFC-U+EB09,U+EB0B-U+EB4E,U+EB50-U+EBEB,U+F000-U+F00E,U+F010-U+F01E,U+F021-U+F03E,U+F040-U+F04E,U+F050-U+F05E,U+F060-U+F06E,U+F070-U+F07E,U+F080-U+F08E,U+F090-U+F09E,U+F0A0-U+F0AE,U+F0B0-U+F0B2,U+F0C0-U+F0CE,U+F0D0-U+F0DE,U+F0E0-U+F0EE,U+F0F0-U+F0FE,U+F100-U+F10E,U+F110-U+F115,U+F118-U+F11E,U+F120-U+F12E,U+F130-U+F13E,U+F140-U+F14E,U+F150-U+F15E,U+F160-U+F16E,U+F170-U+F17E,U+F180-U+F18E,U+F190-U+F19E,U+F1A0-U+F1AE,U+F1B0-U+F1BE,U+F1C0-U+F1CE,U+F1D0-U+F1DE,U+F1E0-U+F1EE,U+F1F0-U+F1FE,U+F200-U+F20E,U+F210-U+F21E,U+F221-U+F22D,U+F230-U+F23E,U+F240-U+F24E,U+F250-U+F25E,U+F260-U+F26E,U+F270-U+F27E,U+F280-U+F28E,U+F290-U+F29E,U+F2A0-U+F2AE,U+F2B0-U+F2BE,U+F2C0-U+F2CE,U+F2D0-U+F2DE,U+F2E0,U+F300-U+F32F,U+F400-U+F533,U+F0001-U+F012E,U+F0131-U+F0205,U+F0207-U+F02D0,U+F02D2-U+F02D4,U+F02D6-U+F02F4,U+F02F6-U+F0386,U+F0388-U+F043C,U+F043E-U+F05CC,U+F05CE-U+F0AF5,U+F0AF7-U+F0AF8,U+F0AFA-U+F0AFB,U+F0AFD-U+F0B02,U+F0B04,U+F0B06-U+F0C15,U+F0C18-U+F1AF0 Symbols Nerd Font Mono
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -771,9 +774,10 @@ mouse_hide_wait -1
 
 #: Window layout {{{
 
-remember_window_size  no
+# remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
+remember_window_size  no
 
 #: If enabled, the OS Window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -782,6 +786,7 @@ remember_window_size  no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
+# enabled_layouts *
 enabled_layouts tall
 
 #: The enabled window layouts. A comma separated list of layout names.
@@ -828,7 +833,9 @@ enabled_layouts tall
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 2
+# window_padding_width 0
+window_padding_width 4
+
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -853,13 +860,11 @@ window_padding_width 2
 #: only at the bottom and right edges.
 
 # active_border_color #00ff00
-active_border_color none
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
 # inactive_border_color #cccccc
-inactive_border_color #ffffff
 
 #: The color for the border of inactive windows.
 
@@ -955,6 +960,7 @@ inactive_border_color #ffffff
 #: Tab bar {{{
 
 # tab_bar_edge bottom
+tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -970,6 +976,7 @@ inactive_border_color #ffffff
 #: contents of the current tab.
 
 # tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1028,12 +1035,14 @@ inactive_border_color #ffffff
 #: the tab_bar_style.
 
 # tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
 #: slanted, round.
 
 # tab_activity_symbol none
+tab_activity_symbol "  "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity. If you want to use
@@ -1041,11 +1050,13 @@ inactive_border_color #ffffff
 #: tab_title_template for how this is rendered.
 
 # tab_title_max_length 0
+tab_title_max_length 32
 
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
 # tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template "{fmt.fg._f38ba8}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title[:max_title_length]}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -1095,6 +1106,7 @@ inactive_border_color #ffffff
 # active_tab_foreground   #000
 # active_tab_background   #eee
 # active_tab_font_style   bold-italic
+active_tab_font_style   bold
 # inactive_tab_foreground #444
 # inactive_tab_background #999
 # inactive_tab_font_style normal
@@ -1605,6 +1617,7 @@ inactive_border_color #ffffff
 #: better off just hiding the titlebar with hide_window_decorations.
 
 # macos_option_as_alt no
+macos_option_as_alt left
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1651,6 +1664,7 @@ inactive_border_color #ffffff
 #: but less pretty.
 
 # macos_show_window_title_in all
+macos_show_window_title_in window
 
 #: Control where the window title is displayed on macOS. A value of
 #: window will show the title of the currently active window at the
@@ -2457,6 +2471,6 @@ inactive_border_color #ffffff
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Catppuccin-My-Mocha
 include current-theme.conf
 # END_KITTY_THEME
