--- a/kitty/themes/Catppuccin-My-Mocha.conf
+++ b/kitty/themes/Catppuccin-My-Mocha.conf
@@ -22,8 +22,8 @@ cursor_text_color       #1E1E2E
 url_color               #F5E0DC
 
 # Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
+active_border_color     none
+inactive_border_color   #11111B
 bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
@@ -31,11 +31,12 @@ wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #7F849C
-inactive_tab_background #1E1E2E
-tab_bar_background      #1E1E2E
+active_tab_foreground   #CDD6F4
+active_tab_background   #1E1E2E
+inactive_tab_foreground #6C7086
+inactive_tab_background #181825
+tab_bar_background      #11111B
+tab_bar_margin_color    #11111B
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
