--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -31,7 +31,7 @@ wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #CDD6F4
+active_tab_foreground   #b4befe
 active_tab_background   #1E1E2E
 inactive_tab_foreground #6C7086
 inactive_tab_background #181825
