--- a/kitty/themes/Catppuccin-My-Mocha.conf
+++ b/kitty/themes/Catppuccin-My-Mocha.conf
@@ -27,8 +27,8 @@ inactive_border_color   #11111B
 bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+wayland_titlebar_color  system
+macos_titlebar_color    #11111B
 
 # Tab bar colors
 active_tab_foreground   #b4befe
