--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -787,7 +787,7 @@ remember_window_size  no
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
-enabled_layouts tall
+enabled_layouts tall,vertical
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1664,7 +1664,7 @@ macos_option_as_alt left
 #: but less pretty.
 
 # macos_show_window_title_in all
-macos_show_window_title_in window
+macos_show_window_title_in menubar
 
 #: Control where the window title is displayed on macOS. A value of
 #: window will show the title of the currently active window at the
@@ -1675,7 +1675,7 @@ macos_show_window_title_in window
 #: macos_menubar_title_max_length for how to control the length of the
 #: title in the menu bar.
 
-# macos_menubar_title_max_length 0
+macos_menubar_title_max_length 32
 
 #: The maximum number of characters from the window title to show in
 #: the macOS global menu bar. Values less than one means that there is
@@ -1957,6 +1957,7 @@ macos_show_window_title_in window
 
 # map kitty_mod+enter new_window
 # map cmd+enter       new_window
+map cmd+enter       new_window_with_cwd
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
@@ -2001,10 +2002,12 @@ macos_show_window_title_in window
 #: Next window
 
 # map kitty_mod+] next_window
+map cmd+] next_window
 
 #: Previous window
 
 # map kitty_mod+[ previous_window
+map cmd+[ previous_window
 
 #: Move window forward
 
@@ -2088,6 +2091,34 @@ macos_show_window_title_in window
 
 #::  Works like focus_visible_window above, but swaps the window.
 
+#: Moves the window into a new OS window
+
+map shift+cmd+n detach_window
+
+#: Moves the window into a new tab
+
+map shift+cmd+t detach_window new-tab
+
+#: Moves the window into the previously active tab
+
+# map cmd+shift+p detach_window tab-prev
+
+#: Moves the window into the tab at the left of the active tab
+
+# map cmd+shift+l detach_window tab-left
+
+#: Asks which tab to move the window into
+
+map cmd+d detach_window ask
+
+#: Moves the tab into a new OS window
+
+# map ctrl+f2 detach_tab
+
+#: Asks which OS Window to move the tab into
+
+# map shift+cmd+d detach_tab ask
+
 #: }}}
 
 #: Tab management {{{
@@ -2152,7 +2183,7 @@ macos_show_window_title_in window
 #: Next layout
 
 # map kitty_mod+l next_layout
-
+map cmd+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
