Make kitty open new tab next to current one

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2139,6 +2139,7 @@ map cmd+d detach_window ask
 
 # map kitty_mod+t new_tab
 # map cmd+t       new_tab
+map cmd+t       new_tab !neighbor
 
 #: Close tab
 
