--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1106,7 +1106,7 @@ tab_title_template "{fmt.fg._f38ba8}{bell_symbol}{activity_symbol}{fmt.fg.tab}{t
 # active_tab_foreground   #000
 # active_tab_background   #eee
 # active_tab_font_style   bold-italic
-active_tab_font_style   bold
+active_tab_font_style bold
 # inactive_tab_foreground #444
 # inactive_tab_background #999
 # inactive_tab_font_style normal
@@ -2139,7 +2139,7 @@ map cmd+d detach_window ask
 
 # map kitty_mod+t new_tab
 # map cmd+t       new_tab
-map cmd+t       new_tab !neighbor
+map cmd+t new_tab !neighbor
 
 #: Close tab
 
@@ -2153,10 +2153,12 @@ map cmd+t       new_tab !neighbor
 #: Move tab forward
 
 # map kitty_mod+. move_tab_forward
+map cmd+. move_tab_forward
 
 #: Move tab backward
 
 # map kitty_mod+, move_tab_backward
+map cmd+, move_tab_backward
 
 #: Set tab title
 
