--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -33,10 +33,12 @@ macos_titlebar_color    #11111B
 # Tab bar colors
 active_tab_foreground   #b4befe
 active_tab_background   #1E1E2E
+active_tab_font_style   normal
 inactive_tab_foreground #6C7086
 inactive_tab_background #181825
 tab_bar_background      #11111B
 tab_bar_margin_color    #11111B
+inactive_tab_font_style   normal
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
