Add alias for git status

--- a/git/config
+++ b/git/config
@@ -5,3 +5,4 @@
 	editor = nvim
 [alias]
         tree = log --graph --decorate --pretty=oneline --abbrev-commit --all
+        stat = status --short
