--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1105,7 +1105,7 @@ tab_title_template "{fmt.fg._f38ba8}{bell_symbol}{activity_symbol}{fmt.fg.tab}{t
 
 # active_tab_foreground   #000
 # active_tab_background   #eee
-# active_tab_font_style   bold-italic
+active_tab_font_style normal
 # inactive_tab_foreground #444
 # inactive_tab_background #999
 # inactive_tab_font_style normal
