[git] Update email

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-	email = 48527182+hyphmngo@users.noreply.github.com
+	email = 48527182+lilmngo@users.noreply.github.com
 	name = Jongheon Park
 [core]
 	editor = nvim
