[git] Change email once again

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [user]
-	email = 48527182+gabagoolparser@users.noreply.github.com
+	email = 48527182+tinygabagool@users.noreply.github.com
 	name = Jongheon Park
 [core]
 	editor = nvim
