--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -4,6 +4,7 @@
 [core]
 	editor = nvim
 [alias]
+        addi = add -p .
         dt = difftool
         tree = log --graph --decorate --pretty=oneline --abbrev-commit --all
         stat = status --short
