[git] Change 'addi' to 'addp'

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -4,7 +4,7 @@
 [core]
 	editor = nvim
 [alias]
-        addi = add -p .
+        addp = add -p .
         dt = difftool
         tree = log --graph --decorate --pretty=oneline --abbrev-commit --all
         stat = status --short
